// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activity gets single activity 1`] = `
Object {
  "activity": Object {
    "__typename": "Activity",
    "createdAt": "2018-02-26T19:44:34.778Z",
    "description": "We are going to do something really great!",
    "duration": "120",
    "id": "fa7a48e0-1043-11e8-b919-8f03cfc03e44",
    "title": "My Great Activity",
    "updatedAt": "2018-02-26T19:44:34.778Z",
    Symbol(id): "Activity:fa7a48e0-1043-11e8-b919-8f03cfc03e44",
  },
  Symbol(id): "ROOT_QUERY",
}
`;

exports[`activity return allActivities 1`] = `
Object {
  "allActivities": Array [
    Object {
      "__typename": "Activity",
      "createdAt": "2018-02-26T19:44:34.778Z",
      "description": "We are going to do something really great!",
      "duration": "120",
      "id": "fa7a48e0-1043-11e8-b919-8f03cfc03e44",
      "title": "My Great Activity",
      "updatedAt": "2018-02-26T19:44:34.778Z",
      Symbol(id): "Activity:fa7a48e0-1043-11e8-b919-8f03cfc03e44",
    },
  ],
  Symbol(id): "ROOT_QUERY",
}
`;
